test/corpus/options/valid.txt
==================
Output options
==================

opt server_output = "./server/network.lua"
opt client_output = "./client/network.lua"
opt types_output = "./shared/types.lua"

---

(source_file
  (option_declaration
    (identifier)
    (string))
  (option_declaration
    (identifier)
    (string))
  (option_declaration
    (identifier)
    (string)))

==================
Remote options
==================

opt remote_scope = "NETWORK"
opt remote_folder = "Remotes"

---

(source_file
  (option_declaration
    (identifier)
    (string))
  (option_declaration
    (identifier)
    (string)))

==================
Behavior options
==================

opt casing = "snake_case"
opt write_checks = true
opt typescript = false
opt manual_event_loop = true
opt typescript_max_tuple_length = 10
opt yield_type = "promise"
opt disable_fire_all = false

---

(source_file
  (option_declaration
    (identifier)
    (string))
  (option_declaration
    (identifier)
    (boolean))
  (option_declaration
    (identifier)
    (boolean))
  (option_declaration
    (identifier)
    (boolean))
  (option_declaration
    (identifier)
    (number))
  (option_declaration
    (identifier)
    (string))
  (option_declaration
    (identifier)
    (boolean)))

==================
Tooling options
==================

opt tooling = true
opt tooling_output = "./tooling.lua"
opt tooling_show_internal_data = false

---

(source_file
  (option_declaration
    (identifier)
    (boolean))
  (option_declaration
    (identifier)
    (string))
  (option_declaration
    (identifier)
    (boolean)))

==================
With comments
==================

-- Configure outputs
opt server_output = "./server.lua"
opt client_output = "./client.lua"

-- Configure behavior
opt write_checks = true
opt typescript = false

---

(source_file
  (comment)
  (option_declaration
    (identifier)
    (string))
  (option_declaration
    (identifier)
    (string))
  (comment)
  (option_declaration
    (identifier)
    (boolean))
  (option_declaration
    (identifier)
    (boolean)))
